# Assigntment2_IOT

./: CMakeLists.txt
src/: analysis.c  analysis_draft.c  analysis_log.c  assignment2_IOT.c  exercise_1.c  exercise_2.c  exercise_3.c  exercise_4.c  exercise_5.c  exercise_6.c  log.json
